# TSCppBot

./: .gitignore  CMakeLists.txt  TSCppBot.db.example  commands.json  config.json  create_database.sh  main.cpp  util.cpp  util.h  vcpkg.json
.github/workflows/: build.yml
cmake/: FindDPP.cmake
command_modules/: db_commands.cpp  db_commands.h  meta.cpp  meta.h  moderation.cpp  moderation.h  server_info.cpp  server_info.h  template.cpp  template.h
src/: main.cpp  util.cpp  util.h
src/command_modules/: db_commands.cpp  db_commands.h  meta.cpp  meta.h  moderation.cpp  moderation.h  server_info.cpp  template.cpp  template.h
src/listeners/: automod_rules.cpp  automod_rules.h  guild.cpp  guild.h  members.cpp  members.h  message_create.cpp  message_create.h  messages.cpp  messages.h  template.cpp  template.h
